
Version Release History
=======================

Version 2.0.0-beta7 - June 23, 2012
   * Fixed an issue in how Bowtie 2 aligns longer reads in --local mode.  Some
     alignments were incorrectly curtailed on the left-hand side.
   * Fixed issue --un (or --un-*) would fail to output unaligned reads when
     --no-unal was also specified.
   * -M option is now deprecated.  It will be removed in subsequent versions.
   * Gaps are now left-aligned in a manner similar to BWA and other tools.
     Note a couple caveats regarding left-alignment of gaps.
   * Fixed issue whereby wrapper script would not pass on exitlevel correctly,
     sometimes spuriously hiding non-0 exitlevel.
   * Added documentation for YT:Z to manual
   * Compiles with g++ 2.7

Version 2.0.0-beta6 - May 7, 2012
   * Bowtie 2 now handles longer reads in a more memory-economical fashion,
     which should prevent many out-of-memory issues for longer reads.
   * Error message now produced when -L is set greater than 32.
   * Added a warning message to warn when bowtie2-align binary is being run
     directly, rather than via the wrapper.  Some functionality is provided by
     the wrapper, so Bowtie 2 should always be run via the bowtie2 executable
     rather than bowtie2-align.
   * Fixed an occasional crashing bug that was usually caused by setting the
     seed length relatively short.
   * Fixed an issue whereby the FLAG, RNEXT and PNEXT fields were incorrect for
     some paired-end alignments.  Specifically, this affected paired-end
     alignments where both mates aligned and one or both mates aligned
     non-uniquely.
   * Fixed issue whereby compressed input would sometimes be mishandled.
   * Renamed --sam-* options to omit the "sam-" prefix for brevity.  The old
     option names will also work.
   * Added --no-unal option to suppress SAM records corresponding to unaligned
     reads, i.e., records where FLAG field has 0x4 set.